<resources>
    <string name="app_name">NU_MAD_SM2022_Final_Project_4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_seeMore">See More</string>
    <string name="textView_prominentColors">Prominent Colors:</string>
    <string name="textView_paletteName">Palette Name</string>
    <string name="textView_suggestedColorPalettes">Suggested Color Palettes:</string>
    <string name="button_save">Save</string>
    <string name="textView_numberOfColors">Number of Colors:</string>
    <string name="editText_addColorCode">Add Color Code</string>

    <string name="favorite_welcome">Welcome Artist!</string>
    <string name="favorite_palette_list_label">Your palettes:</string>
    <string name="button_add">Add</string>
    <string name="textView_searchResults">Search results for</string>

    <string-array name="palette_sort_options">
        <item>Sort by:</item>
        <item>Favorites</item>
        <item>Name</item>
        <item>Colors</item>
        <item>Last modified</item>
    </string-array>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="gallery">Gallery</string>
    <string name="album">Album</string>
    <string name="create_new_palette">Create a new palette</string>
    <string name="add_photo">Add Photo</string>
    <string name="manually_add_colors">Manually Add Colors</string>
    <string name="add_color_hex_code">Add Color Hex Code</string>
    <string name="current_list_of_colors">Current List of Colors:</string>
    <string name="save_palette">Save Palette</string>
    <string name="hex_label">Hex:</string>
    <string name="rgb_label">RGB:</string>
    <string name="cmyk_label">CMYK:</string>
    <string name="selected_color">Selected Color:</string>
    <string name="see_more_palettes">See More Palettes</string>
    <string name="select_alternative_palette">Select Alternative Palette:</string>
    <string name="switch_camera">switch camera</string>
    <string name="onboarding_greeting">Welcome to Patches!</string>
    <string name="onboarding_register">Register</string>
    <string name="onboarding_login">Login</string>
    <string name="login_label">Log In</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="register_label">Register</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Repeat Password</string>
    <string name="logout_button">Log Out</string>
    <string name="back">Back</string>
    <string name="make_public">Make Public</string>
    <string name="palette_edit_button">Edit</string>
    <string name="palette_delete_button">Delete</string>
    <string name="edit_palette_delete_warning">Click to DELETE</string>
</resources>