<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterLogInFragment">

    <TextView
        android:id="@+id/onboarding_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/onboarding_greeting"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onboarding_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/onboarding_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_textView" />

    <Button
        android:id="@+id/onboarding_button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_login"
        app:layout_constraintEnd_toEndOf="@+id/onboarding_button_register"
        app:layout_constraintStart_toStartOf="@+id/onboarding_button_register"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_button_register" />
</androidx.constraintlayout.widget.ConstraintLayout>