<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePaletteOptionsFragment">

    <TextView
        android:id="@+id/textViewCreatePaletteOptionsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_new_palette"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCreatePaletteOptionsTakePhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#7F73FD"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/take_photo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreatePaletteOptionsAddPhoto"
        app:layout_constraintStart_toStartOf="@+id/buttonCreatePaletteOptionsAddPhoto"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreatePaletteOptionsHeader" />

    <Button
        android:id="@+id/buttonCreatePaletteOptionsAddPhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#7F73FD"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_photo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreatePaletteOptionsManuallyAddColors"
        app:layout_constraintStart_toStartOf="@+id/buttonCreatePaletteOptionsManuallyAddColors"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreatePaletteOptionsTakePhoto" />

    <Button
        android:id="@+id/buttonCreatePaletteOptionsManuallyAddColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EC008C"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/manually_add_colors"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreatePaletteOptionsAddPhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>