<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePaletteManuallyFragment">

    <EditText
        android:id="@+id/editTextCreatePaletteManuallyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/textView_paletteName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="#80E6E6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreatePaletteManuallyName">

        <TextView
            android:id="@+id/textViewCreatePaletteManuallyAddColorHexCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/add_color_hex_code"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextCreatePaletteManuallyColorHex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewCreatePaletteManuallyAddColorHexCode"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreatePaletteManuallyAddColorHexCode"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonCreatePaletteManuallyAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#7F73FD"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/button_add"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextCreatePaletteManuallyColorHex"
            app:layout_constraintStart_toEndOf="@+id/editTextCreatePaletteManuallyColorHex"
            app:layout_constraintTop_toTopOf="@+id/editTextCreatePaletteManuallyColorHex" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonCreatePaletteManuallySave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#EC008C"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/button_save"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCreatePaletteManually"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreatePaletteManuallySave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/current_list_of_colors"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <CheckBox
        android:id="@+id/createPaletteManually_checkBox_makeCloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/make_public"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCreatePaletteManuallySave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonCreatePaletteManuallySave"
        app:layout_constraintTop_toTopOf="@+id/buttonCreatePaletteManuallySave" />

    <CheckBox
        android:id="@+id/editPalette_checkBox_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_palette_delete_warning"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCreatePaletteManuallySave"
        app:layout_constraintEnd_toStartOf="@+id/buttonCreatePaletteManuallySave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCreatePaletteManuallySave" />

</androidx.constraintlayout.widget.ConstraintLayout>